# prettyline

./: .gitignore  README.md
prettyline/: Cargo.toml
prettyline/src/: constants.rs  lib.rs  main.rs  misc.rs  prompt.rs  setup.rs
