[package]
name = "prettyline"
version = "0.3.0"
publish = false
edition = "2021"
authors = ["Michel Novus <michelnovus@gmail.com>"]
description = "Prettyline customizes any shell prompt with a static style."
readme = "../README.md"
repository = "https://github.com/michelnovus/prettyline"
license = "MIT"
keywords = ["prompt", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
anstyle = "1.0.8"
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
regex = "1.10.6"
